gitops/kustomize/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-quarkus-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-quarkus-app
  template:
    spec:
      containers:
        - name: my-quarkus-app
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
