gitops/kustomize/overlays/prod/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-quarkus-app
  labels:
    app: my-quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-quarkus-app
  template:
    metadata:
      labels:
        app: my-quarkus-app
        deployment: my-quarkus-app
    spec:
      containers:
        - name: my-quarkus-app
          image: 'quay.io/rh_ee_sshirodk/my-quarkus-app'
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
