gitops/kustomize/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-quarkus-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
