gitops/kustomize/overlays/prod/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-quarkus-app
  namespace: demo-app-prod
  labels:
    app: my-quarkus-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
  selector:
    app: my-quarkus-app
