gitops/kustomize/overlays/prod/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-quarkus-app
spec:
  to:
    kind: Service
    name: my-quarkus-app
  port:
    targetPort: '8082'
